# MITgcm

./: .gitignore  .readthedocs.yml  .travis.yml  LICENSE.txt  README.md  commands  test.txt  해양도시
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
adjoint/: README  adjoint_ecco  adjoint_ecco_sed.com  adjoint_sed.com  makefile  tamc_code_ecco.prot_with_gmredi_kpp  tamc_code_ecco_ad.f_with_gmredi_kpp  tamc_code_ecco_ad.f_without_gmredi_kpp  tamc_code_ecco_ad.prot_with_gmredi_kpp  tamc_code_ecco_ad.prot_without_gmredi_kpp
diags/: README
doc/: .gitignore  ChangeLog.pre38  Makefile  README  (+17 more)
tools/mpack-1.6/: .gitignore  Changes  Makefile.am  Makefile.in  README.mac  README.unix  aclocal.m4  changelog  codes.c  common.h  configure  configure.in  control  copyright  decode.c  encode.c  getopt.c  macICAPI.h  macICGlue.v  macICKeys.h  macICTypes.h  macbhex.c  macfile.c  macmpack.c  macmpack.h  macnapp.c  macnapp.h  macndlog.c  macnfile.c  macninit.c  macnsmtp.c  macntcp.c  macnte.c  macos.c  macpcstr.c  macproj.hqx  macrsrc.hqx  magic.c  md5.h  md5c.c  (+17 more)
tools/mpack-1.6/cmulocal/: afs.m4  agentx.m4  arx.m4  berkdb.m4  bsd_sockets.m4  c-attribute.m4  c-fpic.m4  com_err.m4  com_err_link.m4  common.m4  cyrus.m4  db.m4  find-func-no-libs.m4  find-func-no-libs2.m4  find-func.m4  heimdal.m4  init_automake.m4  kafs.m4  kerberos_v4.m4  kerberos_v5.m4  libXau.m4  libcyrus.m4  libloguse.m4  libnet.m4  libpcap.m4  librestrict.m4  libssl.m4  libtoolhack.m4  libwrap.m4  mips-abi.m4  nadine.m4  nana.m4  openssl.m4  pthreads.m4  sasl.m4  sasl2.m4  tcl.m4  telnet.m4  ucdsnmp.m4  util.m4
(+11933 files in other folders)
